--- a/zarf/docker-compose.yml
+++ b/zarf/docker-compose.yml
@@ -9,8 +9,6 @@ services:
     hostname: api01
     environment:
       - RINHA_DB_HOST=db:5432
-    ports:
-      - "8081:8080"
     depends_on:
       - db
     deploy:
@@ -22,9 +20,7 @@ services:
   api02:
     <<: *api 
     hostname: api02
-    ports:
-      - "8082:8080"
- 
+
   nginx:
     image: nginx:latest
     volumes:
@@ -41,7 +37,7 @@ services:
           memory: "10MB"
 
   db:
-    image: postgres:16-alpine
+    image: postgres:16
     hostname: db
     environment:
       - POSTGRES_PASSWORD=postgres
@@ -49,8 +45,8 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
-   # volumes:
-   #   - ./script.sql:/docker-entrypoint-initdb.d/script.sql
+    volumes:
+      - ./docker/configs/postgres/script.sql:/docker-entrypoint-initdb.d/script.sql
     deploy:
       resources:
         limits:
