--- a/zarf/docker-compose.yml
+++ b/zarf/docker-compose.yml
@@ -9,13 +9,14 @@ services:
     hostname: api01
     environment:
       - RINHA_DB_HOST=db:5432
+      - RINHA_REDIS_HOST=redis:6379
     depends_on:
       - db
-    deploy:
-      resources:
-        limits:
-          cpus: "0.6"
-          memory: "200MB"
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: "1"
+#          memory: "500MB"
 
   api02:
     <<: *api 
@@ -30,11 +31,18 @@ services:
       - api02
     ports:
       - "9999:9999" 
-    deploy:
-      resources:
-        limits:
-          cpus: "0.17"
-          memory: "10MB"
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: "0.17"
+#          memory: "10MB"
+  
+  redis:
+    image: bitnami/redis:latest
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "6379:6379"
 
   db:
     image: postgres:16
@@ -47,15 +55,11 @@ services:
       - "5432:5432"
     volumes:
       - ./docker/configs/postgres/script.sql:/docker-entrypoint-initdb.d/script.sql
-    deploy:
-      resources:
-        limits:
-          # Note que a soma de todos os limites dos serviços
-          # aqui declarados é de 1.5 unidades de CPU e 550MB
-          # de memória. A distribuição feita aqui é apenas
-          # um exemplo – distribua como quiser.
-          cpus: "0.13"
-          memory: "140MB"
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: "0.13"
+#          memory: "140MB"
 
   # Open Telemetry.
   otel-collector:
