--- a/zarf/docker-compose.yml
+++ b/zarf/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - RINHA_OTEL_ENABLE_TRACE=true
     depends_on:
       - db
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "1"
-#          memory: "500MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.4"
+          memory: "150MB"
 
   api02:
     <<: *api 
@@ -31,11 +31,11 @@ services:
       - api02
     ports:
       - "9999:9999" 
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0.17"
-#          memory: "10MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: "50MB"
   
   db:
     image: postgres:16
@@ -48,11 +48,11 @@ services:
       - "5432:5432"
     volumes:
       - ./docker/configs/postgres/script.sql:/docker-entrypoint-initdb.d/script.sql
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0.13"
-#          memory: "140MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "200MB"
 
   # Open Telemetry.
   otel-collector:
